# sploink

./: .gitignore  .vercelignore  LICENSE  PRD.md  README.md  build.sh  mkdocs.yml  pyproject.toml  sploink_architecture.html  vercel.json
bench/: __init__.py  agent.py  compare.py  dataset.py  graphs.py  run.py  score.py  strategies.py
bench/results/: v2_cpu.csv  v2_hw.csv  v2_lpu.csv
docs/: architecture.md  bench.md  concepts.md  eraser-diagram.md  examples.md  index.md  quickstart.md  roadmap.md  tools.md
docs/stylesheets/: extra.css
examples/: async_fanout_demo.py  observe_only.py  observe_real.py  route_demo.py
sploink/: __init__.py  architecture.py  canvas.py  classify.py  dashboard.py  graph.py  index.py  pricing.py  report.py  route.py  router.py  stack.py  trace.py  workflow.py  wrap.py
tests/: test_concurrent_workflows.py  test_resolve_route.py
