[project]
name = "sploink"
version = "0.0.1"
description = "Heterogeneous compute routing for AI agent workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "anthropic>=0.40",
    "groq>=0.11",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "together>=2.14.0",
    "ollama>=0.6.2",
    "datasets>=4.8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sploink"]
